# super-saiyan-browser

./: .env.example  .gitignore  .mcp.json  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: verify.yml  weekly-provider-intelligence.yml
configs/: browser-use-profile.sh  hermes-mcp.yaml
docs/: agent-quickstart.md  anti-detection-results.md  chrome-extension-ui.md  chrome-extension.md  listkit-scrape-handoff.md  printing-press-cli.md  research-airtop.md  research-anchor-orgo.md  research-browser-use.md  setup-walkthrough.md  slack-agent-setup.md
examples/: decodo_proxy.py  lane_decodo_http.py  rank1_browser_use.py  rank1_playwright.py  rank2_airtop.py  rank2_hyperbrowser.py  rank3_steel.py  rank4_orgo.py
examples/workflows/: authenticated-browsing.json  bdr_facebook_friend.json  bdr_facebook_like.json  bdr_facebook_message.json  bdr_instagram_comment.json  bdr_instagram_follow.json  bdr_instagram_like.json  bdr_twitter_follow.json  brightdata_serp.json  brightdata_unlock.json  desktop-fallback.json  extraction.json  lead-generation.json  monitoring.json  publishing-draft.json  testing.json
extension/: background.js  content.js  ids-engine.js  manifest.json  tab-scraper.js
extension/scripts/: test-tab-scraper.mjs
extension/sidepanel/: app.js  index.html  styles.css
extension/test-fixtures/: listkit-b2b.html
mcp/: super-browser-server
references/: combo-playbook.md  cost-model.md  live-test-matrix.md  orgo-api.md  provider-matrix.md  routing-playbook.md  security-and-approval-policy.md
references/providers/: README.md  airtop.md  brightdata-browser.md  brightdata-dataset.md  brightdata-serp.md  brightdata-unlocker.md  browser-use.md  browserbase-capability-audit.md  browserbase.md  decodo-http.md  hyperbrowser.md  orgo.md  playwright.md  steel.md
scripts/: super-browser  verify-super-browser  weekly-provider-intelligence.py
skills/airtop-specialist/: SKILL.md
skills/brightdata-specialist/: SKILL.md
skills/browser-use-specialist/: SKILL.md
skills/decodo-http-specialist/: SKILL.md
skills/hyperbrowser-specialist/: SKILL.md
skills/orgo-specialist/: SKILL.md
skills/playwright-specialist/: SKILL.md
skills/publishing-safety-specialist/: SKILL.md
skills/steel-specialist/: SKILL.md
skills/super-browser-orchestrator/: SKILL.md
skills/super-browser-planner/: SKILL.md
skills/super-browser-verifier/: SKILL.md
src/super_browser/: __init__.py  adapters.py  agent.py  artifacts.py  bundle.py  cli.py  costs.py  deliberation.py  env_checklist.py  env_file.py  fleet.py  handoff.py  live_evidence.py  live_tests.py  mcp_server.py  models.py  policy.py  production.py  profiles.py  provider_signup.py  providers.py  proxy.py  redaction.py  router.py  runtime.py  setup_helpers.py  setup_walkthrough.py  store.py  verifier.py
src/super_browser/brightdata/: __init__.py  browser.py  client.py  datasets.py  serp.py  unlocker.py  zone_discovery.py  zones.py
src/super_browser/lead_scraper/: __init__.py  hunt.py
src/super_browser/lead_scraper/executors/: __init__.py  directories.py  facebook_groups.py  google_dorks.py  http_util.py  linkedin.py  meta_ad_library.py  publicwww.py
tests/: test_approvals.py  test_brightdata_adapters.py  test_brightdata_zone_discovery.py  test_deliberation.py  test_execution.py  test_profiles.py  test_provider_docs_parity.py  test_redaction.py  test_repo_structure.py  test_router_policy.py  test_store_cli_mcp.py  test_verifier.py
